--- a/Course-7 : Data Analysis with Python/ppt/Final project.ipynb
+++ b/Course-7 : Data Analysis with Python/ppt/Final project.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#                              GRIP internship "
+    "#                              Grp "
    ]
   },
   {
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# By : Pankaj Kumar Barman"
+    "# By :Anie"
    ]
   },
   {
